--- a/app.yaml
+++ b/app.yaml
@@ -2,5 +2,18 @@ runtime: php55
 api_version: 1
 
 handlers:
-- url: /.*
+- url: /
   script: index.php
+
+- url: /index\.html
+  script: index.php
+
+- url: /stylesheets
+  static_dir: css
+
+- url: /(.*\.(gif|png|jpg))$
+  static_files: images/\1
+  upload: images/.*\.(gif|png|jpg)$
+
+- url: /.*
+  script: not_found.php
